<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   You may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_auto_recorder"
            style="@style/ToolbarAppearance.ExploreHMS.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_auto_recorder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/h16"
            android:layout_marginEnd="@dimen/h16"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h16"
                android:text="@string/auto_recorder_start_stop_record_by_type" />

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonAppearance.ExploreHMS.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:onClick="startRecordByType"
                android:text="@string/txt_start_record_total_steps"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonAppearance.ExploreHMS.Outline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:onClick="stopRecordByType"
                android:text="@string/txt_stop_record_total_steps" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h16"
                android:background="@color/colorGray1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.ExploreHMS.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:padding="16dp"
                    android:text="@string/txt_result" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray1" />

                <TextView
                    android:id="@+id/auto_recorder_log_info"
                    style="@style/TextAppearance.ExploreHMS.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/h16"   />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
